--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@ body {
     background-color: black;
 }
 
-.container {
+.card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
     max-width: 1100px;
     margin: 0 auto;
-}
-
-.card {
-    background-color: #fff;
 }
