--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,29 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #ebebeb;
+  background-color: #ebebeb;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: black;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .card {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    max-width: 1100px;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border: 1px solid red;
 }
