--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,46 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-  background-color: #ebebeb;
+  background-color: #e3e7e8;
 }
 
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: black;
 }
 
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
+.input__search {
+  width: 30%;
+  border-radius: 20px;
+  padding: 10px;
+  outline: none;
 }
 
-.card {
+.container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-  border: 1px solid red;
+  border-bottom: 1px solid black;
+  gap: 30px;
+  padding: 20px;
+  max-width: 1100px;
+  margin: 50px auto;
+}
+
+.texto {
+  width: 400px;
+}
+
+.card__titulo {
+  font-size: 900;
+  text-transform: uppercase;
 }
